make sure z-index isn't behind z-avatar

--- a/src/main/resources/scss/_chat.scss
+++ b/src/main/resources/scss/_chat.scss
@@ -879,7 +879,7 @@
 					top: 0;
   					left: -4px;
 					border-radius: 12em;
-					z-index: 2;
+					z-index: 10;
 					text-indent: 0;
 					line-height: 1.2em;
 					width: auto;
